infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sakura-notes-ingress
  namespace: sakura-notes
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - sakura.notes
      secretName: sakura-notes-tls

  rules:
  - host: sakura.notes
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 8000
      
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 5173
